@@ -1,6 +1,6 @@
 #
 # Linux Deploy configuration file
-# (C) 2012-2015 Anton Skshidlevsky <meefik@gmail.com>
+# (C) 2012-2015 Anton Skshidlevsky <meefik@gmail.com>, GPLv3
 #
 DEBUG_MODE="n"
 TRACE_MODE="n"
@@ -33,6 +33,7 @@ XSERVER_HOST="127.0.0.1"
 FB_DISPLAY="0"
 FB_DPI="100"
 FB_DEV="/dev/graphics/fb0"
-FB_INPUT="/dev/input/event2"
-FB_ARGS=""
+FB_INPUT="/dev/input/event0"
+FB_ARGS="-sharevts vt0"
+FB_REFRESH="0"
 FB_FREEZE="none"
