@@ -183,6 +183,8 @@
     <string name="dialog_title_fbinput_preference">FB: 输入设备路径</string>
     <string name="title_fbargs_preference">X11 参数</string>
     <string name="dialog_title_fbargs_preference">FB: X11 参数</string>
+    <string name="title_fbrefresh_preference">Force refresh</string>
+    <string name="summary_fbrefresh_preference">Force refresh frambuffer</string>
     <string name="title_fbfreeze_preference">冻结 Android 界面</string>
     <string name="dialog_title_fbfreeze_preference">冻结 Android 界面</string>
     <string name="help_text">\n<b>帮助</b>\n\n此应用程序会在一个chroot容器中安装和运行选定的 GNU/Linux 发行版。\n\n步骤：\n1. 获取超级用户（即root）权限\n2. 安装 <a href="https://play.google.com/store/apps/details?id=ru.meefik.busybox">BusyBox</a>\n3. 检查网络连接\n4. 设置安装选项\n5. 开始安装（点击\"属性\" => \"安装\"）\n6. 等待安装完成\n7. 点击\"开始\"按钮启动容器\n8. 通过 CLI、SSH、VNC 或其他方式连接容器\n\n更多内容，详见\"关于\"。</string>
